--- a/CloudWeb/Views/Companies/Create.cshtml
+++ b/CloudWeb/Views/Companies/Create.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="basingDate" class="control-label"></label>
-                <input asp-for="basingDate" class="form-control" type="date"/>
+                <input asp-for="basingDate" class="form-control"/>
                 <span asp-validation-for="basingDate" class="text-danger"></span>
             </div>
             <div class="form-group">
