--- a/CloudWeb/Views/Companies/Index.cshtml
+++ b/CloudWeb/Views/Companies/Index.cshtml
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.nameCompany)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.basingDate.Date)
+                @Html.DisplayFor(modelItem => item.basingDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Location)
