--- a/CloudWeb/Views/Employees/Details.cshtml
+++ b/CloudWeb/Views/Employees/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Specialization)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Teams)
+            @Html.DisplayNameFor(model => model.Team)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Teams.Id)
+            @Html.DisplayFor(model => model.Team.Id)
         </dd>
     </dl>
 </div>
