--- a/CloudWeb/Views/Customers/Edit.cshtml
+++ b/CloudWeb/Views/Customers/Edit.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="dateOfBirth" class="control-label"></label>
-                <input asp-for="dateOfBirth" class="form-control" type="date"/>
+                <input asp-for="dateOfBirth" class="form-control"/>
                 <span asp-validation-for="dateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
