--- a/CloudWeb/Views/Employees/Index.cshtml
+++ b/CloudWeb/Views/Employees/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Specialization)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Teams)
+                @Html.DisplayNameFor(model => model.Team)
             </th>
             <th></th>
         </tr>
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.Specialization)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Teams.TeamName)
+                    @Html.DisplayFor(modelItem => item.Team.TeamName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
