--- a/CloudWeb/Views/Orders/Create.cshtml
+++ b/CloudWeb/Views/Orders/Create.cshtml
@@ -14,12 +14,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="teamId" class="control-label"></label>
+                <select asp-for="teamId" class="form-control" asp-items="ViewBag.teamId"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="productId" class="control-label"></label>
-                <select asp-for="productId" class ="form-control" asp-items="ViewBag.productId"></select>
+                <select asp-for="productId" class="form-control" asp-items="ViewBag.productId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="customerId" class="control-label"></label>
-                <select asp-for="customerId" class ="form-control" asp-items="ViewBag.customerId"></select>
+                <select asp-for="customerId" class="form-control" asp-items="ViewBag.customerId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="deadLine" class="control-label"></label>
