--- a/CloudWeb/Views/Orders/Delete.cshtml
+++ b/CloudWeb/Views/Orders/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Team)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Team.Id)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
         <dd class = "col-sm-10">
