--- a/CloudWeb/Views/Orders/Edit.cshtml
+++ b/CloudWeb/Views/Orders/Edit.cshtml
@@ -15,6 +15,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="teamId" class="control-label"></label>
+                <select asp-for="teamId" class="form-control" asp-items="ViewBag.teamId"></select>
+                <span asp-validation-for="teamId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="productId" class="control-label"></label>
                 <select asp-for="productId" class="form-control" asp-items="ViewBag.productId"></select>
                 <span asp-validation-for="productId" class="text-danger"></span>
@@ -26,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="deadLine" class="control-label"></label>
-                <input asp-for="deadLine" class="form-control" type="date"/>
+                <input asp-for="deadLine" class="form-control" type="date" />
                 <span asp-validation-for="deadLine" class="text-danger"></span>
             </div>
             <div class="form-group">
