--- a/CloudWeb/Views/Shared/_Layout.cshtml
+++ b/CloudWeb/Views/Shared/_Layout.cshtml
@@ -44,6 +44,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
                         </li>
                     </ul>
+                    <div id="tempDiv">
+                        <p id="cityName">Tallinn:</p>
+                        <p id="temp"></p>
+                        <img src="" alt="icon" id="image">
+                    </div>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
