--- a/CloudWeb/Views/Home/About.cshtml
+++ b/CloudWeb/Views/Home/About.cshtml
@@ -6,26 +6,26 @@
     <h1>About us</h1>
     <p>CloudWeb - software development company, which develops highly specialized software, websites and also special tools for managment your own projects.</p>
     <div id="container">
-        <div id="newsContainer">
+        <div id="newsContainer" class="newsDiv">
             <button id="back" class="btn">&#11178;</button>
             <button id="forward" class="btn">&#11179;</button>
             <hr />
             <h2 id="title">Google news</h2>
             <p id="description">Elon Mask has crushed the Twitter.</p>
-            <img src="https://static.life.ru/publications/2022/7/19/691126209796.8171.jpeg" alt="image_is_null" id="urltoImage" width="300px"/>
+            <img src="https://static.life.ru/publications/2022/7/19/691126209796.8171.jpeg" alt="image_is_null" id="urltoImage" width=300/>
         </div>
-        <div id="requiredContainer">
+        <div id="requiredContainer" class="newsDiv">
             <div id="inputContainer" style="margin-top: 10px;">
                 <input type="text" placeholder="Type article name..." id="inputText" />
-                <input type="button" value="Enter" id="btn"/>
+                <input type="button" value="&#10140;" id="btnEnter" />
             </div>
             <p>News categories:</p>
             <ul id="listOfCategories">
-                <li><a href="">Google</a></li>
-                <li><a href="">Sony</a></li>
-                <li><a href="">Microsoft</a></li>
-                <li><a href="">Apple</a></li>
-                <li><a href="">Twitter</a></li>
+                <li><button>Google</button></li>
+                <li><button>Sony</button></li>
+                <li><button>Microsoft</button></li>
+                <li><button>Apple</button></li>
+                <li><button>Twitter</button></li>
             </ul>
         </div>
     </div>
