--- a/CloudWeb/wwwroot/css/site.css
+++ b/CloudWeb/wwwroot/css/site.css
@@ -16,6 +16,8 @@ body {
   margin-bottom: 60px;
 }
 
+/* ===== CSS FOR WEATHER ===== */
+
 #tempDiv {
     display: flex;
     margin-right: 80px;
@@ -39,26 +41,68 @@ body {
     gap: 5em;
 }
 
+.newsDiv {
+    border-radius: 30px;
+    box-shadow: 3px 3px 3px 3px #606060;
+    background-color: rgb(240, 240, 240);
+}
+
 #newsContainer {
     height: 50%;
     width: 800px;
-    box-shadow: 3px 3px 3px 3px black;
-    background-color: rgb(240, 240, 240);
     padding: 10px;
 }
 
 .btn {
-    background-color: #7c7c7c2b;
+    background-color: rgb(220, 71, 22);
     border-radius: 100%;
     width: 60px;
     height: 60px;
     font-size: 30px;
+    margin: 5px;
 }
 
 #requiredContainer {
     height: 40%;
-    width: 300px;
-    box-shadow: 3px 3px 3px 3px black;
-    background-color: rgb(240, 240, 240);
-    
+    width: 300px;    
+}
+
+#btnEnter {
+    background-color: rgb(220, 71, 22);
+    border: none;
+    padding: 10px;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    transition: 0.3s ease-in-out;
+}
+
+#btnEnter:hover {
+    background-color: rgb(220, 71, 22, 0.6);
+}
+
+ul {
+    list-style-type: none;
+}
+
+#listOfCategories button {
+    width: 35%;
+    height: 35px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(220, 71, 22);
+    font-family: Arial;
+    color: white;
+    font-weight: bold;
+    transition: 0.3s ease-in-out;
+}
+
+#listOfCategories button:hover {
+    background-color: rgb(220, 71, 22, 0.6);
+    color: white;
+    border-radius: 15px;
 }
