--- a/CloudWeb/Views/Home/About.cshtml
+++ b/CloudWeb/Views/Home/About.cshtml
@@ -7,8 +7,8 @@
     <p>CloudWeb - software development company, which develops highly specialized software, websites and also special tools for managment your own projects.</p>
     <div id="container">
         <div id="newsContainer" class="newsDiv">
-            <button id="back" class="btn">&#11178;</button>
-            <button id="forward" class="btn">&#11179;</button>
+            <button id="back" class="btnSelect">&#11178;</button>
+            <button id="forward" class="btnSelect">&#11179;</button>
             <hr />
             <h2 id="title">Google news</h2>
             <p id="description">Elon Mask has crushed the Twitter.</p>
