--- a/CloudWeb/wwwroot/css/site.css
+++ b/CloudWeb/wwwroot/css/site.css
@@ -55,9 +55,10 @@ body {
 
 .btnSelect {
     background-color: rgb(220, 71, 22);
+    color: white;
     border-radius: 100%;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     font-size: 30px;
     margin: 5px;
     border: none;
