my damn nightmare...

--- a/CloudWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CloudWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using TestAppAuthAndAuthorize.Areas.Identity.Pages.Account
+
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
