--- a/CloudWeb/Views/Home/About.cshtml
+++ b/CloudWeb/Views/Home/About.cshtml
@@ -29,4 +29,7 @@
             </ul>
         </div>
     </div>
+    <br/>
+    <label for="customRange2" class="form-label" id="formLabel">Example range</label>
+    <input type="range" class="form-range" min="0" max="5" id="customRange2">
 </div>
