--- a/CloudWeb/Views/Companies/Index.cshtml
+++ b/CloudWeb/Views/Companies/Index.cshtml
@@ -8,7 +8,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Create">Create New</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -56,9 +59,12 @@
                 @Html.DisplayFor(modelItem => item.productType)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                @if (User.IsInRole("Admin")) {
+                    <a asp-action="Edit" asp-route-id="@item.id">Edit</a><span>|</span>
+                    <a asp-action="Details" asp-route-id="@item.id">Details</a><span>|</span>
+                    <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                }
+                
             </td>
         </tr>
 }
