--- a/CloudWeb/Views/Shared/_Layout.cshtml
+++ b/CloudWeb/Views/Shared/_Layout.cshtml
@@ -54,6 +54,8 @@
                             </li>
                         }
                     </ul>
+                    
+                    <button id="btnNews" class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">News</button>
                     <div id="tempDiv">
                         <p id="cityName">Tallinn:</p>
                         <p id="temp"></p>
