--- a/CloudWeb/Views/Home/About.cshtml
+++ b/CloudWeb/Views/Home/About.cshtml
@@ -3,10 +3,8 @@
 }
 
 <div class="text-center">
-    <h1>About us</h1>
-    <p>CloudWeb - software development company, which develops highly specialized software, websites and also special tools for managment your own projects.</p>
-
-    <!--<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>-->
+    <h1>Meist</h1>
+    <p>CloudWeb - tarkvaraarendusettevõte, mis arendab spetsialiseeritud tarkvara, veebisaite ja ka spetsiaalseid tööriistu oma projektide haldamiseks.</p>
 
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" style="text-align: center;">
         <div id="showNews" class="card">
