--- a/CloudWeb/Views/Companies/Create.cshtml
+++ b/CloudWeb/Views/Companies/Create.cshtml
@@ -2,13 +2,13 @@
 @model CloudWeb.Models.Company
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Loo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Loo</h1>
 
-<h4>Company</h4>
+<h4>Ettevõte</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,14 +45,14 @@
                 <span asp-validation-for="productType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Loo" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tagasi nimekirja</a>
 </div>
 
 @section Scripts {
