--- a/CloudWeb/Views/Employees/Index.cshtml
+++ b/CloudWeb/Views/Employees/Index.cshtml
@@ -44,9 +44,9 @@
                     @Html.DisplayFor(modelItem => item.Team.TeamName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Muuda</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Üksikasjad</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Kustuta</a>
             </td>
         </tr>
 }
