--- a/CloudWeb/Views/Orders/Create.cshtml
+++ b/CloudWeb/Views/Orders/Create.cshtml
@@ -38,7 +38,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tagasi loendisse</a>
 </div>
 
 @section Scripts {
