--- a/CloudWeb/Views/Products/Create.cshtml
+++ b/CloudWeb/Views/Products/Create.cshtml
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tagasi loendisse</a>
 </div>
 
 @section Scripts {
