--- a/CloudWeb/Views/Products/Details.cshtml
+++ b/CloudWeb/Views/Products/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Üksikasjad</h1>
 
 <div>
     <h4>Product</h4>
@@ -26,6 +26,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Muuda</a> |
+    <a asp-action="Index">Tagasi loendisse</a>
 </div>
