--- a/CloudWeb/Views/Products/Edit.cshtml
+++ b/CloudWeb/Views/Products/Edit.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Muuda</h1>
 
 <h4>Product</h4>
 <hr />
@@ -33,7 +33,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tagasi loendisse</a>
 </div>
 
 @section Scripts {
