--- a/CloudWeb/Views/Teams/Delete.cshtml
+++ b/CloudWeb/Views/Teams/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CloudWeb.Models.Team
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Kustuta";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Kustuta</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Kas olete kindel, et soovite selle kustutada?</h3>
 <div>
     <h4>Team</h4>
     <hr />
@@ -22,7 +22,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Kustuta" class="btn btn-danger" /> |
+        <a asp-action="Index">Tagasi loendisse</a>
     </form>
 </div>
