--- a/CloudWeb/Views/Teams/Index.cshtml
+++ b/CloudWeb/Views/Teams/Index.cshtml
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.TeamName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Muuda</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Üksikasjad</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Kustuta</a>
             </td>
         </tr>
 }
