--- a/CloudWeb/Views/Home/About.cshtml
+++ b/CloudWeb/Views/Home/About.cshtml
@@ -5,26 +5,32 @@
 <div class="text-center">
     <h1>Meist</h1>
     <p>CloudWeb - tarkvaraarendusettevõte, mis arendab spetsialiseeritud tarkvara, veebisaite ja ka spetsiaalseid tööriistu oma projektide haldamiseks.</p>
-
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" style="text-align: center;">
-        <div id="showNews" class="card">
-            <img src="https://static.life.ru/publications/2022/7/19/691126209796.8171.jpeg" id="urltoImage" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title" id="title">Title</h5>
-                <p id="description" class="card-text"></p>
+     
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://cdn-res.keymedia.com/cms/images/us/035/0248_637589565734289264.jpg" class="d-block w-100" alt="...">
             </div>
-            <ul class="list-group list-group-flush">
-                <li id="publishedAt" class="list-group-item">A second item</li>
-                <li id="author" class="list-group-item">A third item</li>
-            </ul>
-            <div class="card-body">
-                <button id="back" class="btnSelect">&#11178;</button>
-                <button id="forward" class="btnSelect">&#11179;</button>
+            <div class="carousel-item">
+                <img src="https://cdn-res.keymedia.com/cms/images/us/037/0132_637342297131713603.jpg" class="d-block w-100" alt="...">
             </div>
-            <div id="inputContainer" style="margin-bottom: 10px;">
-                <input type="text" placeholder="Type article name..." id="inputText" />
-                <input type="button" value="&#10140;" id="btnEnter" />
+            <div class="carousel-item">
+                <img src="https://securecdn.pymnts.com/wp-content/uploads/2016/12/payments-year-of-partnerships-via-api-1000x600.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     </div>
 </div>
