--- a/CloudWeb/Views/Products/Create2.cshtml
+++ b/CloudWeb/Views/Products/Create2.cshtml
@@ -6,9 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create2</h1>
-
-<h4>Product</h4>
+<h1>Tehke toote tellimus</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,7 +23,7 @@
                 <span asp-validation-for="ProductType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Make order" class="btn btn-primary" />
+                <input type="submit" value="Tehke järjekord" class="btn btn-primary" />
             </div>
         </form>
     </div>
