--- a/CloudWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CloudWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -32,7 +32,7 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <select asp-for="Input.Name" class="form-control" asp-items='new SelectList(roles,"Id","Name")'>
+                <select asp-for="Input.Name" class="form-control" asp-items='new SelectList(roles,"Id","Name")' hidden>
                 </select>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
