--- a/CloudWeb/Views/Home/About.cshtml
+++ b/CloudWeb/Views/Home/About.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center" style="margin-bottom: 100px;">
     <h1>Meist</h1>
     <p>CloudWeb - tarkvaraarendusettevõte, mis arendab spetsialiseeritud tarkvara, veebisaite ja ka spetsiaalseid tööriistu oma projektide haldamiseks.</p>
      
